--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nepa.js",
+  "name": "nepa-tech-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,9 +22,6 @@
     "prettier": "^1.7.4"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --write",
-      "git add"
-    ]
+    "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
   }
 }
